router.get('/') is working

--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -1,9 +1,12 @@
-<h1>Products</h1>
-{{#each productList}}
-  <div class= "productList">
-    <form>
-      <h1>name: {{name}} </h1>
-      <h1>price: {{price}}</h1>
-      <h1>inventory: {{{inventory}}</h1>
+{{!-- <h1>Products</h1>
+{{#each newProducts}}
+
+  <div class= "newProducts">
+
+      <h1>name: </h1>
+      <h1>price: </h1>
+      <h1>inventory: {{inventory}}</h1>
+    <form action="/products/index" method="get"></form>
+
   </div>
-{{/each}}
+{{/each}} --}}
