--- a/views/products/new.hbs
+++ b/views/products/new.hbs
@@ -1,13 +1,14 @@
 <h1>Make a Product List</h1>
 
 <form action="/products/new" method="post">
-  <label name="name">Product Name</label>
-  <input type="text" name="name" placeholder="enter names">
+ <label name="name">Product Name</label>
+  <input type="text" name="name" placeholder="enter names" style="text-align: center">
     <br>
   <label name="name">Price</label>
-  <input type="text" name="price" placeholder="enter amount">
+  <input type="text" name="price" placeholder="enter amount" style="text-align: center">
     <br>
   <label name="name">Inventory</label>
-  <input type="text" name="inventory" placeholder="enter inventory">
+  <input type="text" name="inventory" placeholder="enter inventory" style="text-align: center">
     <br>
+  <input type="submit" name="submit">
 </form>
